fix: Prevent detour list page from overflowing Skate's application size

--- a/assets/css/_detour_list_page.scss
+++ b/assets/css/_detour_list_page.scss
@@ -1,4 +1,6 @@
 .c-detour-list-page {
+  box-sizing: border-box;
+
   .c-detour-list-page__button {
     margin-bottom: 2.25rem;
   }
